<resources>
    <string name="app_name">QuotesRCV</string>
    <string name="quote">Quote</string>
    <string name="author">Author:</string>
    <string name="john_doe">John Doe</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="library">Library</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="header_title">Header Title</string>
    <string name="header_subtext">Header SubText</string>
    <string name="manage">Manage</string>
</resources>