<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_menu_home"
        android:checkable="true"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_menu_explore"
        android:checkable="true"
        android:icon="@drawable/ic_menu_explore"
        android:title="@string/explore" />
    <item
        android:id="@+id/nav_menu_subscription"
        android:checkable="true"
        android:icon="@drawable/ic_menu_subscription"
        android:title="@string/subscriptions" />
    <item
        android:id="@+id/nav_menu_library"
        android:checkable="true"
        android:icon="@drawable/ic_menu_library"
        android:title="@string/library" />

    <item android:title="@string/manage">
        <menu>
            <item
                android:id="@+id/nav_menu_settings"
                android:checkable="true"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/settings" />

            <item
                android:id="@+id/nav_menu_account"
                android:checkable="true"
                android:icon="@drawable/ic_menu_account"
                android:title="@string/account" />
        </menu>
    </item>


</menu>
