<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    app:cardBackgroundColor="?attr/colorSurfaceContainerHigh"
    app:strokeWidth="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvQuote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/quote"
            android:textColor="?attr/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:text="@string/author"
            android:textColor="?attr/colorSecondary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvQuote"
            app:layout_constraintTop_toBottomOf="@+id/tvQuote" />

        <TextView
            android:id="@+id/tvAuthorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/john_doe"
            android:textColor="?attr/colorSecondary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvAuthor"
            app:layout_constraintStart_toEndOf="@+id/tvAuthor"
            app:layout_constraintTop_toTopOf="@+id/tvAuthor" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>